--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  min-height: 100%;
 }
 .overlay {
   background-color: rgba(180, 219, 255, 0.5);
